[gd_scene load_steps=6 format=2]

[ext_resource path="res://App/Extensions/KID_Extension/Scripts/Sub Panels/FormFilterNode.gd" type="Script" id=1]
[ext_resource path="res://Internal/Default/Themes/HeaderText.tres" type="Theme" id=2]
[ext_resource path="res://App/Extensions/KID_Extension/Scripts/Utils/HintToConsole.gd" type="Script" id=3]
[ext_resource path="res://Internal/Default/Fonts/RobotoMono/static/RobotoMono-Bold.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 4 )

[node name="FormFilterNode" type="HBoxContainer"]
margin_right = 392.0
margin_bottom = 48.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 368.0
margin_bottom = 81.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 368.0
margin_bottom = 18.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "FormID or EditorID:"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 368.0
margin_bottom = 46.0

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_right = 328.0
margin_bottom = 24.0
size_flags_horizontal = 3
pressed = true
text = "Use Automatic ID Cleaning"

[node name="StringHelp" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_top = 1.0
margin_right = 368.0
margin_bottom = 23.0
rect_min_size = Vector2( 36, 0 )
hint_tooltip = "Automatic cleaning is a utility to quickly and easily apply KID's FormID requirements to the IDs you wish to filter.
Rules:
- Use '0x' format.
- Remove all leading zeroes.

Note:
Won't have any effect on already compliant IDs."
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "?"
align = 1
script = ExtResource( 3 )

[node name="StringEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 368.0
margin_bottom = 76.0
clear_button_enabled = true
placeholder_text = "e.g. FE051801~MyMod.esm or 0x51801~MyMod.esm"

[node name="Divider" type="ColorRect" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 368.0
margin_bottom = 81.0
rect_min_size = Vector2( 0, 1 )
color = Color( 0.235294, 0.227451, 0.266667, 1 )

[node name="DeleteButton" type="Button" parent="."]
margin_left = 372.0
margin_right = 392.0
margin_bottom = 81.0
theme = ExtResource( 2 )
text = "X"

[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
